# MNL-project

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  bandit.yml  docker-compose.yml  mia-ci.yml  pylint.yml  pyproject.toml  pytest.ini  python-app.yml  requirements.txt  resposta.txt
.github/workflows/: backend-tests.yml  ci-all.yml  pre-commit.yml  pylint.yml  python-app.yml
backend/: Dockerfile  data.py  deps.py  main.py  movie.py  pytest.ini  requirements.txt  settings.py
backend/__local_use__/: create_users.py  main_users.py
backend/app/: deps.py  main.py  reset_password.py
backend/data/: items.json
backend/repositories/: bookmarks_repo.py  items_repo.py  movies_repo.py  penalties_repo.py  reset_tokens_repo.py  review_repo.py  reviews_repo.py  sessions_repo.py  users_repo.py
backend/routers/: admin_analytics.py  admin_sync.py  auth.py  bookmarks.py  items.py  movies.py  password_reset.py  penalties.py  recommendations.py  reviews.py  user_routes.py
backend/schemas/: bookmarks.py  data.py  item.py  movies.py  password_reset.py  penalties.py  recommendations.py  review.py  reviews.py  user.py  users.py
backend/services/: analytics_service.py  auth_service.py  bookmarks_service.py  external_sync_service.py  (+8 more)
frontend/: Dockerfile  README.md
reports/: backend_report.txt  bandit_report.json
scrum-documents/: attendees.txt  discussion_points.txt  meetings.txt  responsabilities.txt
security/: password_resets.json
test/: test_auth.py  test_service_integration.py
testing-documents/: README.md
tests/: Dockerfile.test  README.md  docker-compose.test.yml
(+131 files in other folders)
