[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.black]
line-length = 88
target-version = ['py313']
skip-string-normalization = true

[tool.isort]
profile = "black"
known_first_party = ["app", "schemas", "repositories"]
default_section = "THIRDPARTY"

[tool.pytest.ini_options]
pythonpath = "backend"
testpaths = ["backend/tests"]
addopts = "-q"
markers = ["integration: tests needing network/external services"]
